table layout for links on welcome page

--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
 
   <link rel="stylesheet" href="css/foundation.css">
   <link rel="stylesheet" href="css/custom.css">
-
-
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <script src="js/vendor/custom.modernizr.js"></script>
 
 </head>
 
 <body>
+<div class="row">
+  <div class="large-10 columns small-centered">
+    <h1 class="our-titles">Shira and Avi's Wedding</h1>
+  </div>
+</div>
 
 <!-- Content Slider -->
 <div class="row">
@@ -35,11 +39,6 @@
   </div>
 </div>
 
-<div class="row">
-  <div class="large-10 columns small-centered">
-    <h1 class="our-titles">Shira and Avi are getting married!</h1>
-  </div>
-</div>
 
 <div class="row">
   <div class="large-12 small-centered columns">
@@ -48,25 +47,28 @@
   </div>
 </div>
 
+
 <div class="row">
-  <div class="container">
-    <ul>
-      <li class="panel"><a href="#">Event Info</a></li>
+  <table class="welcome-links">
+    <tr>
+      <td><a href="#">Event Info</a></td>
 
-      <li class="panel"><a href="#">Travel</a></li>
+      <td><a href="#">Travel</a></td>
 
-      <li class="panel"><a href="#">Guide to Jewish Ceremony</a></li>
+      <td><a href="#">Guide to Jewish Ceremony</a></td>
 
-      <li class="panel"><a href="#">What to do in Chicago</a></li>
+      <td><a href="#">What to do in Chicago</a></td>
 
-      <li class="panel"><a href="#">Registry Information</a></li>
+      <td><a href="#">Registry Information</a></td>
 
-      <li class="panel"><a href="#">Our Story</a></li>
+      <td><a href="#">Our Story</a></td>
 
-      <li class="panel"><a href="#">Contact us</a></li>
-    </ul>
+      <td><a href="#">Contact us</a></td>
+    </tr>
+  </table>
   </div>
 </div>
+
 
   <script>
   document.write('<script src=' +
