cool single page loading using jquery

--- a/index.html
+++ b/index.html
@@ -8,113 +8,138 @@
   <title>Shira and Avi's Wedding</title>
 
 
+  <link href='http://fonts.googleapis.com/css?family=Lato:400' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/foundation.css">
   <link rel="stylesheet" href="css/custom.css">
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <script src="js/vendor/custom.modernizr.js"></script>
+  <script src="js/vendor/jquery.js"></script>
+  <script src="js/panel.js"></script>
 
 </head>
 
 <body>
-<div class="row">
-  <div class="large-10 columns small-centered">
-    <h1 class="our-titles">Shira and Avi's Wedding</h1>
+
+  <div class="row" >
+    <div id="info-panel" class="large-6 small-6 columns left transparent-dark">
+    </div>
+
+    <div class="large-4 small-6 columns right transparent-light">
+      <h1 class="our-titles">Shira & Avi</h1>
+      <h3 class="our-titles">August 10, 2014</h3>
+      <h3 class="our-titles">Highland Park, Illinois</h3>
+
+      <ul >
+        <li><a id="event-info" href="#">Event Info</a><br></li>
+        <li><a id="travel" href="#">Travel</a><br></li>
+        <li><a id="jewish-guide" href="#">Guide to Jewish Wedding</a><br></li>
+        <li><a id="chicago" href="#">What to do in Chicago</a><br></li>
+        <li><a id="registry" href="#">Registry Information</a><br></li>
+        <li><a id="our-story" href="#">Our Story</a><br></li>
+        <li><a id="contact-us" href="#">Contact us</a><br></li>
+      </ul>
+    </div>
   </div>
-</div>
 
-<!-- Content Slider -->
-<div class="row">
-  <div class="large-12" >
-    <ul class="example-orbit" id="gallery" data-orbit data-options="animation_speed:1000;">
-      <li>
-        <img class="welcome-photos" src="img/jared_wedding.jpg" alt="slide image">
-      </li>
-      <li>
-        <img class="welcome-photos" src="img/toronto_wedding.jpg" alt="slide image">
-      </li>
-      <li>
-        <img class="welcome-photos" src="img/garden.jpg" alt="slide image">
-      </li>
-    </ul>
+
+
+  <div id="event-info-html">
+    <h1>Event Info</h1>
+    <h3>August 10, 2014</h3>
+    <p>Kabbalat Panim & Tisch at 12:00 PM</p>
+    <p>Chuppah at 1:00 PM</p>
+    <p>North Suburban Synagogue Beth El</p>
+    <p>1175 Sheridan Road</p>
+    <p>Highland Park, IL</p>
+    <a class='close' href='#'>Close</a>
   </div>
-</div>
 
-
-<div class="row">
-  <div class="large-12 small-centered columns">
-    <h3 class="subheader our-titles">August 10, 2014</h3>
-    <h3 class="subheader our-titles">Highland Park, Illinois</h3>
+  <div id="contact-us-html">
+    <h1>Contact us</h1>
+    <p>We'd love to hear from you!</p>
+    <p>Email us at <span class="email">wedding@ShiraAndAvi.com</span></p>
+    <a class='close' href='#'>Close</a>
   </div>
-</div>
 
-
-<div class="row">
-  <table class="welcome-links">
-    <tr>
-      <td><a href="#">Event Info</a></td>
-
-      <td><a href="#">Travel</a></td>
-
-      <td><a href="#">Guide to Jewish Ceremony</a></td>
-
-      <td><a href="#">What to do in Chicago</a></td>
-
-      <td><a href="#">Registry Information</a></td>
-
-      <td><a href="#">Our Story</a></td>
-
-      <td><a href="#">Contact us</a></td>
-    </tr>
-  </table>
+  <div id="travel-html">
+    <h3>Planes</h3>
+      <p>The most convienent airport is Chicago O'Hare International Airport (ORD),
+        which hosts most major airlines.
+      </p>
+      <p>If you are a Southwest Airlines frequent flier, then you might consider
+        Chicago Midway International Airport (MDW), but it is much
+        farther from Highland Park than O'Hare.
+      </p>
+      <p>
+        <a href="http://www.americantaxi.com/" target="blank">American Taxi</a></th> is a special service to the suburbs of Chicago. Make a reservation
+        or call from the airport when you arrive.
+      </p>
+      <table>
+        <tr>
+          <th><a href="http://www.americantaxi.com/ATOnlineOrderWeb/rates.jsp#highlandpark" target="blank">American Taxi</a></th>
+        </tr>
+        <tr>
+          <td>Price</td>
+          <td>O'Hare</td>
+          <td>Midway</td>
+        </tr>
+        <tr>
+          <td>Time (mins)</td>
+          <td>40-45</td>
+          <td>60-90</td>
+        </tr>
+        <tr>
+          <td>Price (US$)</td>
+          <td>~$33</td>
+          <td>~$62</td>
+        </tr>
+      </table>
+    <hr>
+    <h3>Trains</h3>
+      <p>Chicago's <a href="http://metrarail.com/metra/en/home.html">Metra</a> runs
+        between downtown Chicago and Highland Park. Get on at Ogilvie Transportation
+        Center (buy tickets in station to avoid surcharge), and get off at
+        Ravinia (not <i>Ravinia Park</i>). The ride is approximately 45 minutes
+        on a Sunday morning, and one-way ticket costs $5.25. Ravinia station is
+        0.7 miles from the synagogue. Either walk, or contact us to arrange a ride.
+      </p>
+    <hr>
+    <h3>Automobiles</h3>
+      <p>
+        You can Google directions. This section is here because we wanted the
+        trifecta, Trains, Planes and Automobiles!
+      </p>
+    <hr>
+    <h3>Hotels</h3>
+      <p>A block will be reserved at multiple hotels convienent to the venue.
+        Information to follow.</p>
+    <hr>
+    <a class='close' href='#'>Close</a>
   </div>
-</div>
 
+  <div id="jewish-guide-html">
+    <h2>Guide for the Perplexed</h2>
+    <h4>Understanding Jewish Wedding Traditions</h4>
+    <p>Coming Soon!</p>
+    <a class='close' href='#'>Close</a>
+  </div>
 
-  <script>
-  document.write('<script src=' +
-  ('__proto__' in {} ? 'js/vendor/zepto' : 'js/vendor/jquery') +
-  '.js><\/script>')
-  </script>
+  <div id="chicago-html">
+    <h2>What to do in Chicago</h2>
+    <p>Coming Soon!</p>
+    <a class='close' href='#'>Close</a>
+  </div>
 
-  <script src="js/foundation.min.js"></script>
-  <!--
+  <div id="registry-html">
+    <h2>Where we're registered</h2>
+    <p>Coming Soon!</p>
+    <a class='close' href='#'>Close</a>
+  </div>
 
-  <script src="js/foundation/foundation.js"></script>
+  <div id="our-story-html">
+    <h2>About us and how we met</h2>
+    <p>Coming Soon!</p>
+    <a class='close' href='#'>Close</a>
+  </div>
 
-  <script src="js/foundation/foundation.alerts.js"></script>
-
-  <script src="js/foundation/foundation.clearing.js"></script>
-
-  <script src="js/foundation/foundation.cookie.js"></script>
-
-  <script src="js/foundation/foundation.dropdown.js"></script>
-
-  <script src="js/foundation/foundation.forms.js"></script>
-
-  <script src="js/foundation/foundation.joyride.js"></script>
-
-  <script src="js/foundation/foundation.magellan.js"></script>
-
-  <script src="js/foundation/foundation.orbit.js"></script>
-
-  <script src="js/foundation/foundation.reveal.js"></script>
-
-  <script src="js/foundation/foundation.section.js"></script>
-
-  <script src="js/foundation/foundation.tooltips.js"></script>
-
-  <script src="js/foundation/foundation.topbar.js"></script>
-
-  <script src="js/foundation/foundation.interchange.js"></script>
-
-  <script src="js/foundation/foundation.placeholder.js"></script>
-
-  <script src="js/foundation/foundation.abide.js"></script>
-
-  -->
-
-  <script>
-    $(document).foundation();
-  </script>
 </body>
 </html>
