fixes long vertical scrollbar

--- a/index.html
+++ b/index.html
@@ -40,105 +40,105 @@
     </div>
   </div>
 
+  <div class='offscreen'>
+    <div id="event-info-html">
+      <h1>Event Info</h1>
+      <h3>August 10, 2014</h3>
+      <p>Kabbalat Panim & Tisch at 12:00 PM</p>
+      <p>Chuppah at 1:00 PM</p>
+      <p>North Suburban Synagogue Beth El</p>
+      <p>1175 Sheridan Road</p>
+      <p>Highland Park, IL</p>
+      <a class='close' href='#'>Close</a>
+    </div>
 
+    <div id="contact-us-html">
+      <h1>Contact us</h1>
+      <p>We'd love to hear from you!</p>
+      <p>Email us at <span class="email">wedding@ShiraAndAvi.com</span></p>
+      <a class='close' href='#'>Close</a>
+    </div>
 
-  <div id="event-info-html">
-    <h1>Event Info</h1>
-    <h3>August 10, 2014</h3>
-    <p>Kabbalat Panim & Tisch at 12:00 PM</p>
-    <p>Chuppah at 1:00 PM</p>
-    <p>North Suburban Synagogue Beth El</p>
-    <p>1175 Sheridan Road</p>
-    <p>Highland Park, IL</p>
-    <a class='close' href='#'>Close</a>
-  </div>
+    <div id="travel-html">
+      <h3>Planes</h3>
+        <p>The most convienent airport is Chicago O'Hare International Airport (ORD),
+          which hosts most major airlines.
+        </p>
+        <p>If you are a Southwest Airlines frequent flier, then you might consider
+          Chicago Midway International Airport (MDW), but it is much
+          farther from Highland Park than O'Hare.
+        </p>
+        <p>
+          <a href="http://www.americantaxi.com/" target="blank">American Taxi</a></th> is a special service to the suburbs of Chicago. Make a reservation
+          or call from the airport when you arrive.
+        </p>
+        <table>
+          <tr>
+            <th><a href="http://www.americantaxi.com/ATOnlineOrderWeb/rates.jsp#highlandpark" target="blank">American Taxi</a></th>
+          </tr>
+          <tr>
+            <td>Price</td>
+            <td>O'Hare</td>
+            <td>Midway</td>
+          </tr>
+          <tr>
+            <td>Time (mins)</td>
+            <td>40-45</td>
+            <td>60-90</td>
+          </tr>
+          <tr>
+            <td>Price (US$)</td>
+            <td>~$33</td>
+            <td>~$62</td>
+          </tr>
+        </table>
+      <hr>
+      <h3>Trains</h3>
+        <p>Chicago's <a href="http://metrarail.com/metra/en/home.html">Metra</a> runs
+          between downtown Chicago and Highland Park. Get on at Ogilvie Transportation
+          Center (buy tickets in station to avoid surcharge), and get off at
+          Ravinia (not <i>Ravinia Park</i>). The ride is approximately 45 minutes
+          on a Sunday morning, and one-way ticket costs $5.25. Ravinia station is
+          0.7 miles from the synagogue. Either walk, or contact us to arrange a ride.
+        </p>
+      <hr>
+      <h3>Automobiles</h3>
+        <p>
+          You can Google directions. This section is here because we wanted the
+          trifecta, Trains, Planes and Automobiles!
+        </p>
+      <hr>
+      <h3>Hotels</h3>
+        <p>A block will be reserved at multiple hotels convienent to the venue.
+          Information to follow.</p>
+      <hr>
+      <a class='close' href='#'>Close</a>
+    </div>
 
-  <div id="contact-us-html">
-    <h1>Contact us</h1>
-    <p>We'd love to hear from you!</p>
-    <p>Email us at <span class="email">wedding@ShiraAndAvi.com</span></p>
-    <a class='close' href='#'>Close</a>
-  </div>
+    <div id="jewish-guide-html">
+      <h2>Guide for the Perplexed</h2>
+      <h4>Understanding Jewish Wedding Traditions</h4>
+      <p>Coming Soon!</p>
+      <a class='close' href='#'>Close</a>
+    </div>
 
-  <div id="travel-html">
-    <h3>Planes</h3>
-      <p>The most convienent airport is Chicago O'Hare International Airport (ORD),
-        which hosts most major airlines.
-      </p>
-      <p>If you are a Southwest Airlines frequent flier, then you might consider
-        Chicago Midway International Airport (MDW), but it is much
-        farther from Highland Park than O'Hare.
-      </p>
-      <p>
-        <a href="http://www.americantaxi.com/" target="blank">American Taxi</a></th> is a special service to the suburbs of Chicago. Make a reservation
-        or call from the airport when you arrive.
-      </p>
-      <table>
-        <tr>
-          <th><a href="http://www.americantaxi.com/ATOnlineOrderWeb/rates.jsp#highlandpark" target="blank">American Taxi</a></th>
-        </tr>
-        <tr>
-          <td>Price</td>
-          <td>O'Hare</td>
-          <td>Midway</td>
-        </tr>
-        <tr>
-          <td>Time (mins)</td>
-          <td>40-45</td>
-          <td>60-90</td>
-        </tr>
-        <tr>
-          <td>Price (US$)</td>
-          <td>~$33</td>
-          <td>~$62</td>
-        </tr>
-      </table>
-    <hr>
-    <h3>Trains</h3>
-      <p>Chicago's <a href="http://metrarail.com/metra/en/home.html">Metra</a> runs
-        between downtown Chicago and Highland Park. Get on at Ogilvie Transportation
-        Center (buy tickets in station to avoid surcharge), and get off at
-        Ravinia (not <i>Ravinia Park</i>). The ride is approximately 45 minutes
-        on a Sunday morning, and one-way ticket costs $5.25. Ravinia station is
-        0.7 miles from the synagogue. Either walk, or contact us to arrange a ride.
-      </p>
-    <hr>
-    <h3>Automobiles</h3>
-      <p>
-        You can Google directions. This section is here because we wanted the
-        trifecta, Trains, Planes and Automobiles!
-      </p>
-    <hr>
-    <h3>Hotels</h3>
-      <p>A block will be reserved at multiple hotels convienent to the venue.
-        Information to follow.</p>
-    <hr>
-    <a class='close' href='#'>Close</a>
-  </div>
+    <div id="chicago-html">
+      <h2>What to do in Chicago</h2>
+      <p>Coming Soon!</p>
+      <a class='close' href='#'>Close</a>
+    </div>
 
-  <div id="jewish-guide-html">
-    <h2>Guide for the Perplexed</h2>
-    <h4>Understanding Jewish Wedding Traditions</h4>
-    <p>Coming Soon!</p>
-    <a class='close' href='#'>Close</a>
-  </div>
+    <div id="registry-html">
+      <h2>Where we're registered</h2>
+      <p>Coming Soon!</p>
+      <a class='close' href='#'>Close</a>
+    </div>
 
-  <div id="chicago-html">
-    <h2>What to do in Chicago</h2>
-    <p>Coming Soon!</p>
-    <a class='close' href='#'>Close</a>
-  </div>
-
-  <div id="registry-html">
-    <h2>Where we're registered</h2>
-    <p>Coming Soon!</p>
-    <a class='close' href='#'>Close</a>
-  </div>
-
-  <div id="our-story-html">
-    <h2>About us and how we met</h2>
-    <p>Coming Soon!</p>
-    <a class='close' href='#'>Close</a>
+    <div id="our-story-html">
+      <h2>About us and how we met</h2>
+      <p>Coming Soon!</p>
+      <a class='close' href='#'>Close</a>
+    </div>
   </div>
 
 </body>
