adds story with impress.js

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 <body>
 
   <div class="row" >
-    <div id="info-panel" class="large-6 small-6 columns left transparent-dark">
+    <div id="info-panel" class="large-6 medium-6 small-12 columns left transparent-dark">
     </div>
 
-    <div class="large-4 small-6 columns right transparent-light">
+    <div class="large-4 medium-4 small-12 columns right transparent-light">
       <h1 class="our-titles">Shira & Avi</h1>
       <h3 class="our-titles">August 10, 2014</h3>
       <h3 class="our-titles">Highland Park, Illinois</h3>
@@ -42,6 +42,7 @@
 
   <div class='offscreen'>
     <div id="event-info-html">
+      <a class='close' href='#'>Close</a>
       <h1>Event Info</h1>
       <h3>August 10, 2014</h3>
       <p>Kabbalat Panim & Tisch at 12:00 PM</p>
@@ -53,6 +54,7 @@
     </div>
 
     <div id="contact-us-html">
+      <a class='close' href='#'>Close</a>
       <h1>Contact us</h1>
       <p>We'd love to hear from you!</p>
       <p>Email us at <span class="email">wedding@ShiraAndAvi.com</span></p>
@@ -60,6 +62,7 @@
     </div>
 
     <div id="travel-html">
+      <a class='close' href='#'>Close</a>
       <h3>Planes</h3>
         <p>The most convienent airport is Chicago O'Hare International Airport (ORD),
           which hosts most major airlines.
@@ -116,6 +119,7 @@
     </div>
 
     <div id="jewish-guide-html">
+      <a class='close' href='#'>Close</a>
       <h2>Guide for the Perplexed</h2>
       <h4>Understanding Jewish Wedding Traditions</h4>
       <p>Coming Soon!</p>
@@ -123,18 +127,21 @@
     </div>
 
     <div id="chicago-html">
+      <a class='close' href='#'>Close</a>
       <h2>What to do in Chicago</h2>
       <p>Coming Soon!</p>
       <a class='close' href='#'>Close</a>
     </div>
 
     <div id="registry-html">
+      <a class='close' href='#'>Close</a>
       <h2>Where we're registered</h2>
       <p>Coming Soon!</p>
       <a class='close' href='#'>Close</a>
     </div>
 
     <div id="our-story-html">
+      <a class='close' href='#'>Close</a>
       <h2>About us and how we met</h2>
       <p>Coming Soon!</p>
       <a class='close' href='#'>Close</a>
