updates story with impress.js

--- a/story.html
+++ b/story.html
@@ -24,25 +24,28 @@
 <div id="impress" data-transition-duration="1000">
 
   <div id="girl" class="step" data-x="0" data-y="0" data-rotate="0" data-scale="1" >
-    <p>There was a girl who moved to DC </p>
-    <p><i>insert picture of Shira</i></p>
+    <p>There was a girl who moved down to DC </p>
+    <img src="img/story/shira.jpg" alt="Shira">
   </div>
 
   <div class="step" data-x="700" data-y="-700" data-rotate="45" data-scale="1">
-    <p>Her friend Justin says, "nu? How is a pretty girl like you single?"</p>
+    <p>Her friend Justin thought, "Nu?"</p>
+    <img src="img/story/justin.jpg" alt="Justin dancing">
+    <p>"How is a pretty girl like you single?"</p>
   </div>
 
-  <div class="step" data-x="700" data-y="0" data-rotate="90" >
-    <p>So he asked his friend David if he knew any nice, single Jewish men in DC</p>
+  <div class="step" data-x="700" data-y="0" data-rotate="90">
+    <p>So Justin asked his friend David, "Do you know any nice, single, Jewish men in DC?"</p>
   </div>
 
-  <div class="step" data-x="1000" data-y="1000" data-rotate="135" data-scale="10">
-    <p>David said, "no..."</p>
+  <div class="step" data-x="1000" data-y="1000" data-rotate="135" data-scale="2">
+    <p>David said, "No..."</p>
+    <img src="img/story/david.jpg" alt="David">
   </div>
 
-  <div class="step" data-x="1000" data-y="1000" data-rotate="315" data-scale=".1">
-    <p>"But I do know Avi!!"</p>
-    <i>(picture of Avi)</i>
+  <div class="step" data-x="1000" data-y="1000" data-rotate="315" data-scale="10">
+    <p>"Well, there is Avi"</p>
+    <img src="img/story/arch.jpg" alt="Avi">
   </div>
 
   <div class="step" data-x="2400" data-y="0" data-rotate="180" data-scale="1">
@@ -50,9 +53,9 @@
   </div>
 
   <div class="step" data-x="-1400" data-y="1400" data-rotate="225" data-scale="1">
-    <p>
-      Conversation and wine flowed, sparks and laughter flew, and they knew this would be the first of many dates
-    </p>
+    <p>Wine, and conversation, flowed. </p>
+    <img src="img/story/wine.jpg" alt="wine tasting">
+    <p>This would be the first of many dates.</p>
   </div>
 
   <div class="step" data-x="-1400" data-y="0" data-rotate="270" data-scale="1">
@@ -60,30 +63,47 @@
   </div>
 
   <div class="step" data-x="0" data-y="-1400" data-rotate="315" data-scale="1">
-    <p>Common Jewish and family values</p>
+    <p>...common values...</p>
   </div>
 
   <div class="step" data-x="1400" data-y="-1400" data-rotate="360" data-scale="1">
-    <p>a shared love of cooking...and eating...</p>
+    <img src="img/story/cooking.jpg" alt="Making hamuntashen">
+    <p>a shared love of cooking...</p>
+  </div>
+
+  <div class="step" data-x="1400" data-y="-1400" data-rotate="180" data-scale="1">
+    <p>and eating  ;)</p>
+    <img src="img/story/eating.jpg" alt="Eating">
   </div>
 
   <div class="step" data-x="2900" data-y="0" data-rotate="45" data-scale="1">
     <p>outdoor activities...</p>
+    <img src="img/story/hiking.jpg" alt="Hiking">
   </div>
 
-  <div class="step" data-x="2000" data-y="2000" data-rotate="90" data-scale="5">
+  <div class="step" data-x="2000" data-y="2000" data-rotate="90" data-scale="1">
     <p>and being <i>ridiculously</i> serious </p>
   </div>
 
-  <div class="step" data-x="2000" data-y="2000" data-rotate="90" data-scale="5" data-z="-100" data-rotate-x="-40" data-rotate-y="10">
-    <p>Not ;-) </p>
+  <div class="step" data-x="2000" data-y="2000" data-rotate="90" data-z="-100" data-rotate-x="-40" data-rotate-y="10" data-scale="1">
+    <div class="left-col">
+      <p class="big">Not ;-)</p>
+      <img src="img/story/serious1.jpg" alt="serious">
+    </div>
+    <div class="right-col">
+      <img src="img/story/serious2.jpg" alt="serious">
+    </div>
   </div>
 
-  <div class="step" data-x="0" data-y="1400" data-rotate="135" data-rotate-x="-40" >
+  <div class="step" data-x="0" data-y="1400" data-rotate="135" data-z="5000">
     <p>And the rest is history</p>
+    <img src="img/story/history.jpg" alt="Happy Couple">
   </div>
 
-  <div id="overview" class="step" data-x="3000" data-y="1500" data-scale="10">
+  <div id="overview" class="step" data-x="3000" data-y="1500" data-z="10000" data-scale=".1">
+    <div class="large">
+      <a href="index"><span class="button">Return to Main Site</span></a>
+    </div>
   </div>
 </div>
 
