links to our story

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li><a id="jewish-guide" href="#">Guide to Jewish Wedding</a><br></li>
         <li><a id="chicago" href="#">What to do in Chicago</a><br></li>
         <li><a id="registry" href="#">Registry Information</a><br></li>
-        <li><a id="our-story" href="#">Our Story</a><br></li>
+        <li><a id="our-story" href="story.html">Our Story</a><br></li>
         <li><a id="contact-us" href="#">Contact us</a><br></li>
       </ul>
     </div>
@@ -136,13 +136,6 @@
     <div id="registry-html">
       <a class='close' href='#'>Close</a>
       <h2>Where we're registered</h2>
-      <p>Coming Soon!</p>
-      <a class='close' href='#'>Close</a>
-    </div>
-
-    <div id="our-story-html">
-      <a class='close' href='#'>Close</a>
-      <h2>About us and how we met</h2>
       <p>Coming Soon!</p>
       <a class='close' href='#'>Close</a>
     </div>
