--- a/story.html
+++ b/story.html
@@ -102,7 +102,7 @@
 
   <div id="overview" class="step" data-x="3000" data-y="1500" data-z="10000" data-scale=".1">
     <div class="large">
-      <a href="index"><span class="button">Return to Main Site</span></a>
+      <a href="index.html"><span class="button">Return to Main Site</span></a>
     </div>
   </div>
 </div>
