--- a/story.html
+++ b/story.html
@@ -49,7 +49,8 @@
   </div>
 
   <div class="step" data-x="2400" data-y="0" data-rotate="180" data-scale="1">
-    <p>Shira and Avi met on a September night in 2012 at Veritas Wine Bar</p>
+    <p>Shira and Avi met on a September night</p>
+    <img src="img/story/september.jpg" alt="September calendar">
   </div>
 
   <div class="step" data-x="-1400" data-y="1400" data-rotate="225" data-scale="1">
@@ -59,6 +60,7 @@
   </div>
 
   <div class="step" data-x="-1400" data-y="0" data-rotate="270" data-scale="1">
+    <img src="img/story/walking.jpg" alt="Holding hands">
     <p>Over the coming months they bonded over ...</p>
   </div>
 
