--- a/index.html
+++ b/index.html
@@ -48,8 +48,12 @@
       <p>Kabbalat Panim & Tisch at 12:00 PM</p>
       <p>Chuppah at 1:00 PM</p>
       <p>North Suburban Synagogue Beth El</p>
-      <p>1175 Sheridan Road</p>
-      <p>Highland Park, IL</p>
+      <p>1175 Sheridan Road, Highland Park, IL</p>
+
+      <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=1175+Sheridan+Road,+Highland+Park,+IL&amp;aq=&amp;sll=42.173582,-87.778616&amp;sspn=0.015616,0.017338&amp;ie=UTF8&amp;hq=&amp;hnear=1175+Sheridan+Rd,+Highland+Park,+Illinois+60035&amp;t=m&amp;ll=42.186684,-87.77647&amp;spn=0.044518,0.073128&amp;z=13&amp;iwloc=A" target="_blank" style="text-align:left">View Larger Map</a>
+
+      <iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=1175+Sheridan+Road,+Highland+Park,+IL&amp;aq=&amp;sll=42.173582,-87.778616&amp;sspn=0.015616,0.017338&amp;ie=UTF8&amp;hq=&amp;hnear=1175+Sheridan+Rd,+Highland+Park,+Illinois+60035&amp;t=m&amp;ll=42.186684,-87.77647&amp;spn=0.044518,0.073128&amp;z=13&amp;iwloc=A&amp;output=embed"></iframe><br />
+
       <a class='close' href='#'>Close</a>
     </div>
 
