--- a/index.html
+++ b/index.html
@@ -45,10 +45,24 @@
       <a class='close' href='#'>Close</a>
       <h1>Event Info</h1>
       <h3>August 10, 2014</h3>
-      <p>Kabbalat Panim & Tisch at 12:00 PM</p>
-      <p>Chuppah at 1:00 PM</p>
-      <p>North Suburban Synagogue Beth El</p>
-      <p>1175 Sheridan Road, Highland Park, IL</p>
+
+      <table>
+        <tr>
+          <td>12:00 PM</td>
+          <td>Kabbalat Panim & Tisch</td>
+        </tr>
+        <tr>
+          <td>1:00 PM</td>
+          <td>Chuppah</td>
+        </tr>
+        <tr>
+          <td>2 - 6:00 PM</td>
+          <td>Reception</td>
+        </tr>
+      </table>
+
+      <p><b>North Suburban Synagogue Beth El <br>
+      1175 Sheridan Road, Highland Park, IL</b></p>
 
       <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=1175+Sheridan+Road,+Highland+Park,+IL&amp;aq=&amp;sll=42.173582,-87.778616&amp;sspn=0.015616,0.017338&amp;ie=UTF8&amp;hq=&amp;hnear=1175+Sheridan+Rd,+Highland+Park,+Illinois+60035&amp;t=m&amp;ll=42.186684,-87.77647&amp;spn=0.044518,0.073128&amp;z=13&amp;iwloc=A" target="_blank" style="text-align:left">View Larger Map</a>
 
@@ -111,12 +125,11 @@
       <hr>
       <h3>Automobiles</h3>
         <p>
-          You can Google directions. This section is here because we wanted the
-          trifecta, Trains, Planes and Automobiles!
+           Rather than paying for cabs to and from the airport, you might consider renting a car during your stay, especially if you’ll be exploring the Chicago area over the weekend.
         </p>
       <hr>
       <h3>Hotels</h3>
-        <p>A block will be reserved at multiple hotels convienent to the venue.
+        <p>A block has been reserved at multiple hotels convienent to the venue.
           Information to follow.</p>
       <hr>
       <a class='close' href='#'>Close</a>
