adds fun trivia page

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <li><a id="chicago" href="#">What to do in Chicago</a><br></li>
         <li><a id="registry" href="#">Registry Information</a><br></li>
         <li><a id="our-story" href="story.html">Our Story</a><br></li>
+        <li><a id="game" href="game.html">Trivia</a><br></li>
         <li><a id="contact-us" href="#">Contact us</a><br></li>
       </ul>
     </div>
