trivia game questions

--- a/game.html
+++ b/game.html
@@ -26,7 +26,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row 1">
     <div class="large-4 small-12 columns">
       <div class="question small-centered">
         <h6>What profession did Shira and Avi both want to have when they grew up?</h6>
@@ -44,7 +44,7 @@
       <div class="question small-centered">
         <h6>What was Shira's favorite movie growing up from which she can still recite every line?</h6>
         <ol class="choices">
-          <span class="result" data-y="Correct. She pretended to be Frederick when acting it out"></span>
+          <span class="result" data-y="Correct. She pretended to be Friedrich when acting it out"></span>
           <li class="choice n">The Wizard of Oz</li>
           <li class="choice y">The Sound of Music</li>
           <li class="choice n">Dirty Dancing</li>
@@ -67,6 +67,87 @@
     </div>
   </div>
 
+  <div class="row 2">
+    <div class="large-4 small-12 columns">
+      <div class="question small-centered">
+        <h6>What was Avi's highest rank in the Army?</h6>
+        <ol class="choices">
+          <span class="result" data-y="Correct, but Shira still won't salute ;-)"></span>
+          <li class="choice n">Major Pain</li>
+          <li class="choice n">Admiral of Vice</li>
+          <li class="choice y">Captain</li>
+          <li class="choice n">General Electric</li>
+        </ol>
+      </div>
+    </div>
+
+    <div class="large-4 small-12 columns">
+      <div class="question small-centered">
+        <h6>In which east coast city has Shira not lived?</h6>
+        <ol class="choices">
+          <span class="result" data-y="Correct. But we're working on that :-)"></span>
+          <li class="choice n">Baltimore</li>
+          <li class="choice n">Washington</li>
+          <li class="choice n">Philadelphia</li>
+          <li class="choice y">Boston</li>
+        </ol>
+      </div>
+    </div>
+
+    <div class="large-4 small-12 columns">
+      <div class="question small-centered">
+        <h6>On which very practical subject did Avi write his college thesis?</h6>
+        <ol class="choices">
+          <span class="result" data-y="Correct! (It was the only one that existed.)"></span>
+          <li class="choice y">Roman cities</li>
+          <li class="choice n">Business ethics</li>
+          <li class="choice n">Military intelligence</li>
+          <li class="choice n">Kosher logic</li>
+        </ol>
+      </div>
+    </div>
+  </div>
+
+  <div class="row 3">
+    <div class="large-4 small-12 columns">
+      <div class="question small-centered">
+        <h6>How many miles are on Shira's and Avi's cars, combined?</h6>
+        <ol class="choices">
+          <span class="result" data-y="Correct. The journey of 210,000 miles starts with...a single mile"></span>
+          <li class="choice n">342,867</li>
+          <li class="choice y">210,000</li>
+          <li class="choice n">84,000</li>
+          <li class="choice n">613</li>
+        </ol>
+      </div>
+    </div>
+
+    <div class="large-4 small-12 columns">
+      <div class="question small-centered">
+        <h6>How many Middle Eastern countries has Avi visited?</h6>
+        <ol class="choices">
+          <span class="result" data-y="Iraq, Eygpt, Israel, Kuwait, Jordan, & Qatar. Honeymoon in Iran?"></span>
+          <li class="choice n">1</li>
+          <li class="choice n">3</li>
+          <li class="choice y">6</li>
+          <li class="choice n">8</li>
+        </ol>
+      </div>
+    </div>
+
+    <div class="large-4 small-12 columns">
+      <div class="question small-centered">
+        <h6>How excited are you for Shira and Avi's wedding?</h6>
+        <ol class="choices">
+          <span class="result" data-y="So are we!"></span>
+          <li class="choice y">Ridiculously</li>
+          <li class="choice y">Heaps</li>
+          <li class="choice y">Oodles</li>
+          <li class="choice y">A lot</li>
+        </ol>
+      </div>
+    </div>
+  </div>
 
 
 </body>
