--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <li><a id="jewish-guide" href="#">Guide to Jewish Wedding</a><br></li>
         <li><a id="chicago" href="#">What to do in Chicago</a><br></li>
         <li><a id="registry" href="#">Registry Information</a><br></li>
-        <li><a id="our-story" href="story.html">Our Story</a><br></li>
-        <li><a id="game" href="game.html">Trivia</a><br></li>
+        <li><a id="our-story" href="story.html">How we met</a><br></li>
+        <li><a id="game" href="game.html">Trivia about us!</a><br></li>
         <li><a id="contact-us" href="#">Contact us</a><br></li>
       </ul>
     </div>
